# interpreter

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.lox
include/: callable.h  environment.h  function.h  lox-interpreter.h  parser.h  scanner.h  token-type.h  token.h  value.h
include/expression/: assignment-expression.h  binary-expression.h  call-expression.h  expression.h  grouping-expression.h  logical-expression.h  unary-expression.h  value-expression.h  variable-expression.h
include/native/: time.h
include/statement/: block-statement.h  expression-statement.h  function-statement.h  if-statement.h  print-statement.h  statement.h  var-statement.h  while-statement.h
src/: CMakeLists.txt  environment.cpp  function.cpp  literal.cpp  lox-interpreter.cpp  main.cpp  parser.cpp  scanner.cpp  test.cpp  token.cpp  value.cpp
src/expression/: CMakeLists.txt  assignment-expression.cpp  binary-expression.cpp  call-expression.cpp  expression.cpp  grouping-expression.cpp  literal-expression.cpp  logical-expression.cpp  unary-expression.cpp  variable-expression.cpp
src/native/: CMakeLists.txt  time.cpp
src/statement/: CMakeLists.txt  block-statement.cpp  expression-statement.cpp  function-statement.cpp  if-statement.cpp  print-statement.cpp  var-statement.cpp  while-statement.cpp
